--- a/app/assets/stylesheets/dairy_products.scss
+++ b/app/assets/stylesheets/dairy_products.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the DairyProducts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+body{
+    background-color: whitesmoke;
+}
+
+input{
+    height: 25px;
+    font-size: 1.1rem;
+   
+}
+.login{
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    padding: 20px; 
+}
+
+.field{
+    color: white;
+    background-color: cornflowerblue;
+    margin-left: 20px;
+    width: 200px;
+    padding:20px;
+
+}
+
+.actions{
+    padding: 20px;
+}
